--- a/tmux.conf
+++ b/tmux.conf
@@ -1,17 +1,3 @@
-# List of plugins
-# Supports `github_username/repo` or full git repo URLs
-set			-g @tpm_plugins '              \
-        tmux-plugins/tpm \
-        tmux-plugins/tmux-sensible \
-        tmux-plugins/tmux-resurrect \
-        '
-# Other examples:
-# github_username/plugin_name    \
-# git@github.com/user/plugin     \
-# git@bitbucket.com/user/plugin  \
-# Initializes TMUX plugin manager.
-# Keep this line at the very bottom of tmux.conf.
-run-shell		'~/.tmux/plugins/tpm/tpm'
 
 # Get colors to work in tmux
 set			-g default-terminal "screen-256color"
@@ -27,12 +13,21 @@ bind-key		C-a last-window
 set-window-option	-g window-status-current-bg white
 set-window-option	-g window-status-current-fg black
 
-# Noob-mode ON -- use mouse to switch panes
-#set-option -g mouse-select-pane on
-
 # set window split
 bind-key		v split-window -h
 bind-key		b split-window
+
+# Use Ctrl-vim keys without prefix key to switch panes
+bind -n C-h select-pane -L
+bind -n C-j select-pane -D
+bind -n C-k select-pane -U
+bind -n C-l select-pane -R
+
+# use ctrl-a + HJKL to resize current pane
+bind-key J resize-pane -D 5
+bind-key K resize-pane -U 5
+bind-key H resize-pane -L 5
+bind-key L resize-pane -R 5
 
 # bottom-bar color
 set			-g status-bg cyan
@@ -45,14 +40,14 @@ set-option		-g set-titles on
 set-option		-g set-titles-string "#T - #W"
 
 # list panes
-bind-key		Space list-panes
+# bind-key		Space list-panes
 
 # Titles (window number, program name, active (or not)
 set-option		-g set-titles on
 set-option		-g set-titles-string '#H:#S.#I.#P #W #T'
 
 # if run as "tmux attach", create a session if one does not already exist
-new-session		-s work 
+new-session		-s work
 
 # vimify tmux
 setw			-g mode-keys vi
@@ -109,9 +104,9 @@ set-window-option	-g window-status-current-fg $tm_color_active
 set-window-option	-g window-status-current-bg default
 set-window-option	-g  window-status-current-format "#[bold]#I #W"
 
-# pane border
-set-option		-g pane-border-fg $tm_color_inactive
-set-option		-g pane-active-border-fg $tm_color_active
+# panes
+set -g pane-border-style 'fg=colour19 bg=colour0'
+set -g pane-active-border-style 'bg=colour0 fg=colour9'
 
 # message text
 set-option		-g message-bg default
@@ -135,8 +130,31 @@ set-option		-g display-panes-colour $tm_color_inactive
 set			-g default-terminal "xterm"
 setw -g aggressive-resize off
 
-# Use Ctrl-vim keys without prefix key to switch panes
-bind -n C-h select-pane -L
-bind -n C-j select-pane -D
-bind -n C-k select-pane -U
-bind -n C-l select-pane -R
+# activity monitoring
+set-window-option -g window-status-activity-attr none
+setw -g monitor-activity on
+set -g visual-activity off
+setw -g window-status-activity-bg black
+setw -g window-status-activity-fg red
+
+bind D source-file ~/.tmux/bbu
+bind Q source-file ~/.tmux/bbp
+bind R source-file ~/.tmux/bbr
+bind S source-file ~/.tmux/split
+
+set-environment -g TMUX_PLUGIN_MANAGER_PATH '~/.tmux/plugins/'
+
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-cpu'
+set -g @plugin 'dracula/tmux'
+
+# Other examples:
+# set -g @plugin 'github_username/plugin_name'
+# set -g @plugin 'git@github.com:user/plugin'
+# set -g @plugin 'git@bitbucket.com:user/plugin'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run -b '~/.tmux/plugins/tpm/tpm'
